WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173470
REGRESSION(
r166799
): LogsPageMessagesToSystemConsoleEnabled corrupts non-ASCII characters
https://bugs.webkit.org/show_bug.cgi?id=173470
Summary
REGRESSION(r166799): LogsPageMessagesToSystemConsoleEnabled corrupts non-ASCI...
Konstantin Tokarev
Reported
2017-06-16 08:22:13 PDT
ConsoleClient::printConsoleMessageWithArguments() incorrectly uses const char* overload of StringBuilder::append() that assummes Latin1 encoding, not UTF8
Attachments
Patch
(1.65 KB, patch)
2017-06-16 08:24 PDT
,
Konstantin Tokarev
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Konstantin Tokarev
Comment 1
2017-06-16 08:23:51 PDT
Before
r166799
this code used printf(" %s", argAsString.utf8().data()); that was correct.
Konstantin Tokarev
Comment 2
2017-06-16 08:24:21 PDT
Created
attachment 313076
[details]
Patch
WebKit Commit Bot
Comment 3
2017-06-16 09:08:34 PDT
Comment on
attachment 313076
[details]
Patch Clearing flags on attachment: 313076 Committed
r218392
: <
http://trac.webkit.org/changeset/218392
>
WebKit Commit Bot
Comment 4
2017-06-16 09:08:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug