REGRESSION(r166799): LogsPageMessagesToSystemConsoleEnabled corrupts non-ASCII characters https://bugs.webkit.org/show_bug.cgi?id=173470

Reviewed by Joseph Pecoraro.

ConsoleClient::printConsoleMessageWithArguments() incorrectly uses
const char* overload of StringBuilder::append() that assummes Latin1
encoding, not UTF8.

* runtime/ConsoleClient.cpp:
(JSC::ConsoleClient::printConsoleMessageWithArguments):


Canonical link: https://commits.webkit.org/190343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218392 268f45cc-cd09-0410-ab3c-d52691b4dbfc